syntax = "proto3";

option csharp_namespace = "CarStore.Hexagonal.Presentation.Grpc";

package user;

service UserGrpcService{
	rpc GetAllUser (GetAllUserReques) returns (GetAllUsersResponse);
	rpc GetUserById (GetUserByIdRequest) returns (UserResponse);

	rpc AddUser (AddUserRequest) returns (UserResponse);
	rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

message GetAllUserReques {}

message GetUserByIdRequest {
  string user_id = 1;
}

message AddUserRequest {
  string full_name = 1;
  string email = 2;
}

message DeleteUserRequest{
	string user_id = 1;
}

message DeleteUserResponse{
	string message = 1;
}

message UserResponse {
  string user_id = 1;
  string full_name = 2;
  string email = 3;
}

message GetAllUsersResponse {
  repeated UserResponse users = 1;
}